objects/DMAPP__Insight_Subcategory__c.object
<CustomObject>
    <fields>
        <fullName>DMAPP__DealmakerID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Dealmaker ID</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DMAPP__Insight_Category__c</fullName>
        <inlineHelpText>Click the search icon to search for and select the Category that this sub-category belongs to.</inlineHelpText>
        <label>Category</label>
        <referenceTo>DMAPP__Insight_Category__c</referenceTo>
        <relationshipName>Insight_subcategories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DMAPP__Namespace__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Insight Namespace</label>
        <referenceTo>DMAPP__Insight_Namespace__c</referenceTo>
        <relationshipLabel>Subcategories</relationshipLabel>
        <relationshipName>Subcategories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DMAPP__Sort_Order__c</fullName>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Subcategory</label>
    <nameField>
        <label>Subcategory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Subcategories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>DMAPP__Prevent_Field_Update</fullName>
        <active>true</active>
        <description>Prevents users updating the Field</description>
        <errorConditionFormula>ISCHANGED(DMAPP__DealmakerID__c)</errorConditionFormula>
        <errorDisplayField>DMAPP__DealmakerID__c</errorDisplayField>
        <errorMessage>The Dealmaker ID field cannot be updated after creation</errorMessage>
    </validationRules>
</CustomObject>